--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.0",
+    "@expo-google-fonts/oswald": "^0.2.0",
     "expo": "~42.0.1",
     "expo-google-fonts": "^0.0.0",
     "expo-status-bar": "~1.0.4",
